force-app/main/default/objects/Master_Quote_Item__c/Master_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>BT Master Quote Line</label>
    <nameField>
        <label>Master Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Master Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>