force-app/main/default/objects/Master_Quote_Item__c/fields/Master_Quote__c.field-meta.xml
<CustomField>
    <fullName>Master_Quote__c</fullName>
    <label>Master Quote</label>
    <referenceTo>Master_Quote__c</referenceTo>
    <relationshipName>Master_Quote_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>