force-app/main/default/objects/Master_Quote_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Master_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>