force-app/main/default/objects/Master_Quote_Item__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Master_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>