force-app/main/default/objects/Master_Quote_Item__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Group</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipName>Master_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>