force-app/main/default/objects/Master_Quote_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Master_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>